--- a/amber.html
+++ b/amber.html
@@ -48,7 +48,7 @@ function MM_swapImage() { //v3.0
 					<tbody>
 						<tr>
 							
-        <td align="middle" valign="center" width="150"><font face="Courier New"><img align="absMiddle" height="192" src="images/npcs/Dworkin.jpg" width="138"></font></td>
+        <td align="middle" valign="center" width="150"><font face="Courier New"><img align="absMiddle" height="192" src="images/npcs/dworkin.jpg" width="138"></font></td>
 							
         <td valign="top" width="590"><a name="Dworkin">Dworkin</a> <font color="#000000"> 
           (NPC) </font> 
