--- a/amber.html
+++ b/amber.html
@@ -276,7 +276,7 @@ function MM_swapImage() { //v3.0
 				<table border="0" cellpadding="4" width="80%">
 					<tbody>
 						<tr>
-							<td align="middle" valign="center" width="150"><font face="Courier New"><img height="192" src="images/npcs/Delwin.jpg" width="138"></font></td>
+							<td align="middle" valign="center" width="150"><font face="Courier New"><img height="192" src="images/npcs/delwin.jpg" width="138"></font></td>
 							
         <td valign="top" width="590"><a name="Benedict">Delwin</a> <font color="#000000"> 
           (Open) </font> 
@@ -289,7 +289,7 @@ function MM_swapImage() { //v3.0
 				<table border="0" cellpadding="4" width="80%">
 					<tbody>
 						<tr>
-							<td align="middle" valign="center" width="150"><font face="Courier New"><img height="192" src="images/npcs/Sand.jpg" width="138"></font></td>
+							<td align="middle" valign="center" width="150"><font face="Courier New"><img height="192" src="images/npcs/sand.jpg" width="138"></font></td>
 							
         <td valign="top" width="590"><a name="Benedict">Sand</a> <font color="#000000"> 
           (Open) </font> 
