--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>nav</TITLE>
+ <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </HEAD>
 <BODY bgcolor="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- URL's used in the movie--> <A HREF=rules.html></A> <A HREF=main.html></A> 
